# ccnv

./: CMakeLists.txt  README.md  build.sh  dev-notes.txt
.github/workflows/: build-and-test.yml  cmake-single-platform.yml  linux-workflow.yml  windows-workflow.yml
g.tests/: CMakeLists.txt
g.tests/src/: currency-ts.cpp  main.cpp
src/: curr_rate_svc.cpp  curr_rate_svc.h  main.cpp
src/utils/: curl_helper.h  currency.h
